--- a/.github/workflows/playwright-reporting.yml
+++ b/.github/workflows/playwright-reporting.yml
@@ -32,6 +32,9 @@ jobs:
 
       - name: Setup dependancies
         run: npm i
+
+      - name: Playwright install
+        run: npx playwright install 
         
       - name: Run tests
         run: npm run test:all
